--- a/src/package.json
+++ b/src/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "body-parser": "~1.15.2",
+    "connect-mongodb-session": "^1.3.0",
     "cron": "^1.2.1",
     "debug": "~2.2.0",
     "express": "~4.14.0",
@@ -11,7 +12,6 @@
     "mongoose": "^4.8.1",
     "morgan": "^1.8.0",
     "pug": "^2.0.0-beta6",
-    "serve-favicon": "~2.3.0",
-    "winston": "^2.3.0"
+    "serve-favicon": "~2.3.0"
   }
 }
