--- a/src/package.json
+++ b/src/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "~1.15.2",
     "connect-mongodb-session": "^1.3.0",
     "cron": "^1.2.1",
